Resized orange buttons to stop need for stretching. Also shifted hue further towards yellow.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -149,7 +149,7 @@ a {
 }
 
 .btn-stretch {
-    background-size: 100% 32px;
+    /*background-size: 100% 32px;*/
 }
 
 
